fixed the stretchy letter box issue

--- a/server/proj_skrabble/skrabble-app/src/components/Letter.css
+++ b/server/proj_skrabble/skrabble-app/src/components/Letter.css
@@ -5,7 +5,7 @@
     margin: 3px;
     display: grid;
     place-items: center;
-    font-size: 30px;
+    font-size: 25px;
     font-weight: bolder;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
@@ -27,7 +27,7 @@
     margin: 3px;
     display: grid;
     place-items: center;
-    font-size: 30px;
+    font-size: 25px;
     font-weight: bolder;
     color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
